Fix spacing between text and edited annotation

--- a/res/css/views/rooms/_EventTile.pcss
+++ b/res/css/views/rooms/_EventTile.pcss
@@ -677,7 +677,7 @@ $left-gutter: 64px;
         font-size: $font-12px;
         color: $secondary-content;
         display: inline-block;
-        margin-left: 9px;
+        margin-inline-start: 9px;
     }
 
     .mx_EventTile_edited {
